# project-nebula

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.js  justfile  pnpm-lock.yaml  tsconfig.base.json
.beads/: beads.base.jsonl  issues.jsonl
.claude/agents/: context-initializer.md
.claude/skills/beads-todo/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/release-desktop/: SKILL.md
.github/workflows/: release-desktop.yml
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  updater.rs
apps/desktop/src-tauri/swift-lib/Sources/swift-lib/: Dialogs.swift
apps/website/: package.json  tailwind.config.js
apps/worker/: Dockerfile
docs/: KNOWLEDGE_BASE.md  architecture.md  development.md  patterns.md
docs/plans/: 2025-01-01-better-auth-setup.md  2025-12-28-k3d-tilt-dev-environment.md  2025-12-29-cdk8s-infra-design.md  2025-12-29-cdk8s-infra-implementation.md  2025-12-30-desktop-release-design.md  2025-12-30-desktop-release-implementation.md  2026-01-02-observability-stack-design.md  2026-01-03-auth-routes-with-inline-errors.md  2026-01-03-inline-form-errors-design.md  2026-01-03-stipple-background-design.md
infra/: Tiltfile  ctlptl.yaml  package.json  tsconfig.json
infra/config/: convex.ts  index.ts  temporal.ts
infra/lib/: Tiltfile  builders.ts  index.ts  k8s.ts  tiltfile.ts  types.ts
scripts/: release-desktop.sh
(+59 files in other folders)
