[package]
name = "nebula-desktop"
version = "0.1.0"
description = "Project Nebula - Developer HUD for AI-assisted coding"
authors = ["you"]
edition = "2021"

[lib]
name = "nebula_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
