[package]
name = "nebula-desktop"
# NOTE: Version is overridden by CI from git tag
version = "0.1.0"
description = "Nebula - Developer HUD for AI-assisted coding"
authors = ["you"]
edition = "2021"

[lib]
name = "nebula_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
swift-rs = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
